@@ -12,7 +12,7 @@
 # Usage message.
 arUsage() {
 	tee >&2 << EOF
-usage: autorevision {-t output-type | -s symbol} [-o cache-file [-f] ] [-e name] [-U] [-V]
+usage: autorevision {-t output-type | -s symbol} [-o cache-file [-f] ] [-e name] [-U] [-q] [-V]
 	Options include:
 	-t output-type		= specify output type
 	-s symbol		= specify symbol output
@@ -20,6 +20,7 @@ usage: autorevision {-t output-type | -s symbol} [-o cache-file [-f] ] [-e name]
 	-f			= force the use of cache data
 	-e name			= set a different output name for VCS_EXTRA
 	-U			= check for untracked files in svn
+	-q			= Silence warnings
 	-V			= emit version and exit
 	-?			= help message
 
@@ -70,7 +71,7 @@ EOF
 
 # Config
 ARVERSION="&&ARVERSION&&"
-while getopts ":t:o:s:e:VfU" OPTION; do
+while getopts ":t:o:s:e:VfqU" OPTION; do
 	case "${OPTION}" in
 		t)
 			AFILETYPE="${OPTARG}"
@@ -89,6 +90,9 @@ while getopts ":t:o:s:e:VfU" OPTION; do
 		;;
 		U)
 			UNTRACKEDFILES="1"
+		;;
+		q)
+			WARNHIDE="1"
 		;;
 		V)
 			echo "autorevision ${ARVERSION}"
@@ -136,6 +140,7 @@ fi
 
 GENERATED_HEADER="Generated by autorevision - do not hand-hack!"
 : "${EXTRA_NAME:="VCS_EXTRA"}"
+: "${WARNHIDE:="0"}"
 
 # Functions to extract data from different repo types.
 # For git repos
@@ -163,7 +168,9 @@ gitRepo() {
 	# Enumeration of changesets
 	VCS_NUM="$(git rev-list --count "${currentRev}" 2>/dev/null)"
 	if [ -z "${VCS_NUM}" ]; then
-		echo "warning: Counting the number of revisions may be slower due to an outdated git version less than 1.7.2.3. If something breaks, please update it." 1>&2
+		if [ ! "${WARNHIDE}" = "1" ]; then
+			echo "warning: Counting the number of revisions may be slower due to an outdated git version less than 1.7.2.3. If something breaks, please update it." 1>&2
+		fi
 		VCS_NUM="$(git rev-list HEAD | wc -l)"
 	fi
 
@@ -199,7 +206,9 @@ gitRepo() {
 	# Date of the current commit
 	VCS_DATE="$(TZ=UTC git show -s --date=iso-strict-local --pretty=format:%cd "${currentRev}" 2>/dev/null | sed -e 's|+00:00|Z|')"
 	if [ -z "${VCS_DATE}" ]; then
-		echo "warning: Action stamps require git version 2.7+." 1>&2
+		if [ ! "${WARNHIDE}" = "1" ]; then
+			echo "warning: Action stamps require git version 2.7+." 1>&2
+		fi
 		VCS_DATE="$(git log -1 --pretty=format:%ci "${currentRev}" | sed -e 's: :T:' -e 's: ::' -e 's|+00:00|Z|')"
 		${LOCAL} ASdis="1"
 	fi
